# my-lan

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  MyLAN_plan_open_source.md  README.md  ROADMAP.md  SECURITY.md  package.json  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  desktop.yml  packaging-smoke.yml  release.yml
agent/: mylan-agent.toml
agent/docker/: Dockerfile  docker-compose.yml
agent/raspberry-pi/: README.md
agent/systemd/: mylan-agent.service
agent/windows/: install.bat  uninstall.bat
apps/cli/: AGENTS.md  Cargo.toml
apps/cli/src/: cli.rs  ctx.rs  lib.rs  main.rs  pipeline.rs  util.rs
apps/cli/src/commands/: agent.rs  device.rs  devices.rs  diagnose.rs  export.rs  mod.rs  ports.rs  scan.rs  serve.rs  services.rs  status.rs
apps/desktop-tauri/: AGENTS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop-tauri/scripts/: a11y-audit.mjs
apps/desktop-tauri/src/: App.tsx  index.css
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/icons/: icon.icns
apps/desktop-tauri/src-tauri/src/: censor.rs  commands.rs  dto.rs  lib.rs  main.rs  state.rs
apps/desktop-tauri/src/components/: censorship-provider.tsx  censura-upgrade-dialog.tsx  confidence-badge.tsx  device-icons.tsx  empty-state.tsx  masked-value.tsx  onboarding-dialog.tsx  online-badge.tsx  profile-select.tsx  relative-time.tsx  theme-provider.tsx  trust-badge.tsx
apps/desktop-tauri/src/components/ui/: badge.tsx  button.tsx  card-header.tsx  card.tsx  collapsible.tsx  dialog.tsx  dropdown-menu.tsx  form-field.tsx  info-tooltip.tsx  input.tsx  progress.tsx  select.tsx  switch.tsx  table.tsx  toast.tsx  tooltip.tsx
apps/desktop-tauri/src/lib/: censor.ts  design-tokens.ts  format.ts  glossary.ts  profiles.ts  tauri.ts  trust-state.ts  use-network-name.ts  utils.ts
apps/desktop-tauri/src/screens/: About.tsx  Dashboard.tsx  DeviceDetail.tsx  Devices.tsx  Scans.tsx  Settings.tsx
apps/desktop-tauri/tests/: censor.test.ts  censorship-provider.test.tsx  censura-upgrade-dialog.test.tsx  fixtures.ts  masked-value.test.tsx  setup.ts  tauri-contract.test.ts  useCensorship.test.tsx  useScan.test.tsx
apps/desktop-tauri/tests/lib/: trust-state.test.ts
apps/desktop-tauri/tests/screens/: dashboard.test.tsx  device_detail.test.tsx  devices.test.tsx  helpers.tsx  settings.test.tsx
crates/mylan-agent/: Cargo.toml
crates/mylan-agent/src/: config.rs  lib.rs  lifecycle.rs  main.rs  privilege.rs  scheduler.rs  windows_service.rs
crates/mylan-agent/tests/: config.rs  lifecycle.rs  privilege.rs  scheduler_tick.rs
crates/mylan-api/: Cargo.toml
crates/mylan-api/src/: auth.rs  broadcast.rs  lib.rs  routes.rs  token.rs  ws.rs
crates/mylan-api/tests/: auth.rs  events_endpoint.rs  rest_endpoints.rs  token_lifecycle.rs  ws_live.rs  ws_resumption.rs
crates/mylan-core/: AGENTS.md  Cargo.toml
crates/mylan-core/src/: confidence.rs  enrich.rs  enums.rs  identity.rs  lib.rs  mac.rs  models.rs  observation.rs
crates/mylan-db/: AGENTS.md  Cargo.toml
crates/mylan-db/src/: codec.rs  connection.rs  device_repo.rs  diff.rs  error.rs  events_repo.rs  lib.rs  migrations.rs  network_repo.rs  pipeline.rs  scan_repo.rs  service_repo.rs  util.rs
crates/mylan-db/tests/: diff.rs  events_repo.rs  pipeline_atomic.rs
crates/mylan-discovery/: AGENTS.md  Cargo.toml
crates/mylan-discovery/src/: arp.rs  dns.rs  error.rs  icmp.rs  iface.rs  lib.rs  mdns.rs  netutil.rs  ping.rs  ssdp.rs  ssid.rs  sudo.rs  tcp_ping.rs  traceroute.rs
crates/mylan-fingerprint/: AGENTS.md  Cargo.toml
crates/mylan-fingerprint/src/: error.rs  fingerprint.rs  lib.rs  oui.rs  reverse.rs  rules.rs
crates/mylan-scanner/: AGENTS.md  Cargo.toml
crates/mylan-scanner/src/: banner.rs  lib.rs  ports.rs  probes.rs  profile.rs  udp.rs
docs/: architecture.md  ethics.md  scanner-design.md
docs/adr/: 0001-sistema-visual-desktop.md  0002-estructura-de-vistas-y-launch.md  0003-componentes-de-estado-y-densidad.md  0004-onboarding-y-feedback-os.md  0005-edicion-hibrida-en-devicedetail.md  0006-naming-certeza-confiable.md
scripts/: pre-push-safety.sh  sync-version.mjs
signatures/device-rules/: camera_rtsp_generic.yaml
signatures/oui/: README.md  oui.csv
tests/integration/: AGENTS.md  Cargo.toml  README.md
tests/integration/src/: e2e_agent_event_api.rs  lib.rs
tests/integration/tests/: export.rs  scan_cancel.rs  scan_pipeline.rs  services_reporting.rs
