[workspace]
resolver = "2"
members = [
    "crates/mylan-core",
    "crates/mylan-db",
    "crates/mylan-discovery",
    "crates/mylan-fingerprint",
    "crates/mylan-scanner",
    "crates/mylan-api",
    "crates/mylan-agent",
    "apps/cli",
    "tests/integration",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
rust-version = "1.96"
license = "AGPL-3.0-or-later"
repository = "https://github.com/johanruizb/mylan"
authors = ["Johan Ruíz"]

[workspace.dependencies]
# Crates internos
mylan-core = { path = "crates/mylan-core" }
mylan-cli = { path = "apps/cli" }
mylan-db = { path = "crates/mylan-db" }
mylan-discovery = { path = "crates/mylan-discovery" }
mylan-fingerprint = { path = "crates/mylan-fingerprint" }
mylan-scanner = { path = "crates/mylan-scanner" }
mylan-api = { path = "crates/mylan-api" }
mylan-agent = { path = "crates/mylan-agent" }
# Externos (versiones pinneadas; reproducibilidad vía Cargo.lock commiteado).
anyhow = "1"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
csv = "1.4.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde_json = "1.0.150"
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "time", "macros", "sync", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
# Externos añadidos en Fase 3 (Paso 0): pinneados (>= floor existente por crate),
# reproducibilidad vía Cargo.lock commiteado.
hickory-resolver = "0.26"
# `net`+`socket` exponen sockopt/recvmsg/ControlMessageOwned base; `uio` activa
# `recvmsg`/`cmsg_space`/`ControlMessageOwned` (cola de errores ICMP del traceroute).
nix = { version = "0.29", features = ["net", "socket", "uio"] }
serde = { version = "1", features = ["derive"] }
socket2 = "0.6"
thiserror = "2"
# `tokio_util::sync::CancellationToken` vive en `pub mod sync;` (no feature-gated
# en tokio-util 0.7); sin features aquí. El `sync` feature de `tokio` ya está en el
# pin de workspace de tokio.
tokio-util = "0.7"
# Externos añadidos en v0.5 Watch: API REST+WS + agent config + token + packaging.
axum = "0.8"
tower = "0.5"
tower-http = "0.6"
getrandom = "0.2"
base64 = "0.22"
toml = "0.8"
windows-service = "0.7"

[profile.release]
strip = true
lto = "thin"
