[package]
name = "mylan-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "mylan_cli"
path = "src/lib.rs"

[[bin]]
name = "mylan"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
comfy-table.workspace = true
csv.workspace = true
mylan-agent.workspace = true
mylan-api.workspace = true
mylan-core.workspace = true
mylan-db.workspace = true
mylan-discovery.workspace = true
mylan-fingerprint.workspace = true
mylan-scanner.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true