[package]
name = "mylan-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mylan-core = { workspace = true }
mylan-db = { workspace = true }
mylan-discovery = { workspace = true }
mylan-fingerprint = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
tower = { workspace = true, features = ["util"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
getrandom = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio-tungstenite = "0.24"
futures-util = "0.3"