[package]
name = "mylan-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mylan-core = { workspace = true }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", default-features = false }
serde_json = "1.0.150"
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
