[package]
name = "mylan-discovery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hickory-resolver.workspace = true
mdns-sd = "0.20.0"
mylan-core.workspace = true
netdev = { version = "0.45.0", features = ["gateway"] }
nix.workspace = true
pnet = "0.35.0"
socket2.workspace = true
thiserror.workspace = true
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "time", "macros", "sync"] }
tokio-util.workspace = true
