[package]
name = "mylan-discovery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hickory-resolver.workspace = true
mdns-sd = "0.20.0"
mylan-core.workspace = true
netdev = { version = "0.45.0", features = ["gateway"] }
socket2.workspace = true
thiserror.workspace = true
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "time", "macros", "sync"] }
tokio-util.workspace = true

# Deps unix-only: `nix` (0.29) no compila en Windows y `pnet` (0.35) requiere
# libpcap. El código que las usa (traceroute, ARP sweep) está cfg-gated a Linux;
# moverlas a target-specific evita que el dep-compile rompa `--target *-windows-*`.
[target.'cfg(unix)'.dependencies]
nix.workspace = true
pnet = "0.35.0"

# SSID detection pura-Rust (sin shell-out), cfg-gated por OS. Linux: zbus
# (NetworkManager D-Bus) con su API bloqueante (`blocking`), sin runtime async
# propagado al crate. Windows: `windows` crate con la WLAN API (`wlanapi`).
[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", features = ["blocking-api"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_WiFi",
] }
