[package]
name = "mylan-fingerprint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
csv = "1.4.0"
hickory-resolver = "0.26.1"
mylan-core = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "net"] }
