[package]
name = "mylan-fingerprint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
csv = "1.4.0"
hickory-resolver.workspace = true
mylan-core = { workspace = true }
serde.workspace = true
serde_yaml_ng = "0.10.0"
thiserror.workspace = true
tokio = { version = "1.52.3", features = ["rt", "net"] }
