[package]
name = "mylan-scanner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mylan-core = { workspace = true }
serde.workspace = true
socket2.workspace = true
thiserror.workspace = true
tokio = { version = "1.52.3", features = ["net", "time", "sync", "rt", "macros", "io-util"] }
tokio-util.workspace = true
