[package]
name = "mylan-integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
csv.workspace = true
mylan-agent.workspace = true
mylan-api.workspace = true
mylan-cli.workspace = true
mylan-core.workspace = true
mylan-db.workspace = true
mylan-fingerprint.workspace = true
mylan-scanner.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tempfile = "3.27.0"