[package]
name = "mylan-desktop"
version = "0.4.1"
edition = "2021"

# This package has its own Cargo.lock and is intentionally NOT a member of the
# parent workspace (apps/desktop-tauri/src-tauri lives under the repo but the
# empty [workspace] table below detaches it — standard Tauri 2 layout). The
# path deps below still belong to the parent workspace at the repo root, so
# their internal `.workspace = true` inheritance resolves against that root.
[workspace]

[lib]
name = "mylan_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
# `backup` feature for the brownfield import (`rusqlite::backup::Backup` gives a
# WAL-consistent snapshot of the CLI db without sharing the live path). Feature
# unification with mylan-db's `bundled` rusqlite is benign.
rusqlite = { version = "0.40.1", features = ["bundled", "backup"] }
csv = "1.3"
mylan-core = { path = "../../../crates/mylan-core" }
mylan-db = { path = "../../../crates/mylan-db" }
mylan-discovery = { path = "../../../crates/mylan-discovery" }
mylan-fingerprint = { path = "../../../crates/mylan-fingerprint" }
mylan-scanner = { path = "../../../crates/mylan-scanner" }
